kubernetes/apps/observability/prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prometheus
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/description: Metrics Monitor
    gethomepage.dev/href: https://prometheus.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "prometheus.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: grafana
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/description: Data Visualizer
    gethomepage.dev/href: https://grafana.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Alertmanager
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: alertmanager.png
    gethomepage.dev/description: Metrics-based Alerts
    gethomepage.dev/href: https://alertmanager.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "alertmanager.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
